--- a/Modulo2/Code/2.1.-Aprendizaje Automático Intro.ipynb
+++ b/Modulo2/Code/2.1.-Aprendizaje Automático Intro.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<img style=\"float: left;;\" src='../Imagenes/iteso.jpg' width=\"50\" height=\"100\"/></a>\n",
     "\n",
@@ -12,15 +16,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Introducción"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Introducción\n",
+    "\n",
     "El aprendizaje automático es el subconjunto de inteligencia artificial (IA) que se centra en desarrollar sistemas que aprenden, o mejoran el rendimiento, en función de los datos que consumen.\n",
     "\n",
     ">Hoy en día, el aprendizaje autónomo funciona en todo nuestro alrededor. Cuando interactuamos con bancos, compramos en línea o usamos redes sociales, los algoritmos de aprendizaje automático entran en juego para hacer que nuestra experiencia sea eficiente, fluida y segura."
@@ -28,7 +31,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Los algoritmos son los motores que impulsan el aprendizaje automático. En general, actualmente se utilizan dos tipos principales de algoritmos de aprendizaje automático:\n",
     "\n",
@@ -41,47 +48,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Aprendizaje Supervizado y No supervizado"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Aprendizaje Supervizado**.\n",
     "\n",
-    "Los algoritmos supervisados son los más utilizados. Con este modelo, un científico de datos actúa como guía y enseña al algoritmo las conclusiones que debe hacer. os ejemplos de aprendizaje automático supervisado incluyen algoritmos tales como regresión lineal y logística, clasificación multiclase y máquinas de vectores de soporte.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Los algoritmos supervisados son los más utilizados. Con este modelo, un científico de datos actúa como guía y enseña al algoritmo las conclusiones que debe hacer. os ejemplos de aprendizaje automático supervisado incluyen algoritmos tales como regresión lineal y logística, clasificación multiclase y máquinas de vectores de soporte.\n",
+    "\n",
     "**Aprendizaje No Supervizado**.\n",
     "\n",
-    "El Aprendizaje No supervisado utiliza un enfoque más independiente, en el que una computadora aprende a identificar procesos y patrones complejos sin que un ser humano proporcione una guía cercana y constante. El aprendizaje automático no supervisado implica la capacitación basada en datos que no tiene etiquetas o un resultado específico definido.\n"
+    "El Aprendizaje No supervisado utiliza un enfoque más independiente, en el que una computadora aprende a identificar procesos y patrones complejos sin que un ser humano proporcione una guía cercana y constante. El aprendizaje automático no supervisado implica la capacitación basada en datos que no tiene etiquetas o un resultado específico definido.\n",
+    "\n",
+    "<div class=\"alert alert-success\" style=\"margin: 10px\">Este módulo tratará sobre algoritmos de Aprendizaje No supervizado y cómo aplicarlos en el ámbito de la inteligencia de negocios.</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "<div class=\"alert alert-danger\" style=\"margin: 10px\">Este módulo tratará sobre algoritmos de Aprendizaje No supervizado y cómo aplicarlos en el ámbito de la inteligencia de negocios.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Proceso de Análisis del Aprendizaje No Supervizado"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Proceso de Análisis del Aprendizaje No Supervizado\n",
+    "\n",
     "Las principales aplicaciones de aprendizaje no supervisado son:\n",
     "\n",
     ">**Segmentación de conjuntos de datos por atributos compartidos.**\n",
@@ -102,7 +106,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Clustering\n",
     "\n",
@@ -116,7 +124,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "El modelo de aprendizaje automático podrá inferir que hay dos clases diferentes sin saber nada más de los datos.\n",
     "\n",
@@ -141,15 +153,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Reducción de Dimensionalidad"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Reducción de Dimensionalidad\n",
+    "\n",
     "Una de las técnicas de preprocesado para modelos de aprendizaje No Supervisado es la reducción de la dimensionalidad, que no es más que la reducción del número de variables en una colección de datos. \n",
     "\n",
     "Las razones por las que nos interesa reducir la dimensionalidad son varias:\n",
@@ -165,31 +176,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Métodos de reducción de la dimensionalidad"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Métodos de reducción de la dimensionalidad\n",
+    "\n",
     "> **Análisis Factorial**. Los valores de los datos observados se expresan como funciones de varias causas posibles para encontrar las más importantes. Se supone que las observaciones son causadas por una transformación lineal de los factores latentes de dimensiones inferiores y por el ruido gaussiano añadido.\n",
     "\n",
     "> **Análisis de componentes principales (PCA)**. Es un procedimiento estadístico que transforma ortogonalmente las n dimensiones numéricas originales de un conjunto de datos en un nuevo conjunto de n dimensiones llamadas componentes principales.\n",
     "\n",
     "> **Análisis discriminante lineal (LDA)**. Proyecta los datos de forma que se maximiza la separabilidad de clases. Los ejemplos de la misma clase se ponen muy juntos en la proyección. Ejemplos de diferentes clases son colocados muy lejos por la proyección."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
